<resources>
    <string name="app_name">GREENETICS</string>
    <string name="select_sensor">Select a sensor</string>


    <string name="login_failed">Login failed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_event_text">In order to calibrate your sensors behaviour and sensitivity, you need to create an event. The event will trigger a change in sensors behaviour, based on your self-defined limits.</string>
    <string name="add_board_text">Here you can add the board information. Customise it according to your needs.</string>
    <string name="add_board_title">Add a board</string>
    <string name="edit_event_text">Here you can change the triggers for the selected event. Modify it according to your needs.</string>

    <string name="about_us">About us</string>
    <string name="about_us_description">Welcome to Greenetics, your number one source for all things greenhouse. We\'re dedicated to giving you the very best of smart home solutions, with a special focus on process sustainability and uniqueness. This is our official app. Enjoy it!</string>
    <string name="add_event">ADD EVENT</string>
    <string name="connect_board">Connect Board</string>
    <string name="local_time">LOCAL TIME</string>
    <string name="updated_last">UPDATED LAST</string>
    <string name="sensor_id">SENSOR ID</string>
    <string name="current_value">CURRENT VALUE</string>
    <string name="edit_event">EDIT EVENT</string>
    <string name="edit_an_event">Edit</string>
    <string name="event">event</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_pass_text">Enter the email associated with your account and we\'ll send an email with instructions on how to reset your password.</string>
    <string name="reset_password_upper">RESET PASSWORD</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="co2">CO² LEVEL</string>
    <string name="temperature_units">°C</string>
    <string name="co2_units">ppm</string>
    <string name="humidity_units">%</string>
    <string name="humidity">HUMIDITY LEVEL</string>
    <string name="luminosity">LUMINOSITY</string>
    <string name="luminosity_units">lux</string>
    <string name="view_events">VIEW EVENTS</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="register_here">Register here</string>
    <string name="registration">Registration</string>
    <string name="registration_text">Fill out the fields below with your personal data in order to create an account.</string>
    <string name="register_upper">Register</string>
    <string name="list_of_events">List of events</string>
    <string name="timestamp">Timestamp:</string>
    <string name="event_name">Event name:</string>
    <string name="top">Top:</string>
    <string name="bottom">Bottom:</string>
    <string name="main_text">Your greenhouse solution.</string>
    <string name="greenhouse_name">GREENHOUSE NAME</string>

    <string name="pick_date_from">FROM</string>
    <string name="pick_date_to">TO</string>
    <string name="celsius_symbol"> °C</string>
    <string name="notification_channel_id">2137</string>
    <string name="notification_title">Greenhouse</string>
    <string name="channel_name">notification</string>
    <string name="channel_description">this is notification</string>
    <string name="greenetics">GREENETICS</string>
    <string name="events_triggered">EVENTS TRIGGERED</string>
    <string name="not_available">N/A</string>
    <string name="trigger_ratio">TRIGGER RATIO</string>
    <string name="average_temperature">AVERAGE TEMPERATURE</string>
    <string name="fetch">FETCH</string>
    <string name="one_month_time">1M</string>
    <string name="one_week_time">7D</string>
    <string name="one_day_time">24H</string>
    <string name="eight_hours_time">8H</string>
    <string name="sensor_condition">SENSOR CONDITION</string>
    <string name="fetch_event">Fetch event</string>
    <string name="top_label">Top:</string>
    <string name="bottom_label">Bottom:</string>
    <string name="sensor_type">Sensor Type</string>
    <string name="update_top_value">Update top value</string>
    <string name="update_bottom_value">Update bottom value</string>
    <string name="re_name_your_event">Re-name your event</string>
    <string name="your_profile">Your profile</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="street">Street:</string>
    <string name="country">Country:</string>
    <string name="postcode">Postcode:</string>
    <string name="e_mail">E-mail:</string>
    <string name="log_out">LOG OUT</string>
    <string name="date_pick_hint">YYYY-MM-dd</string>
    <string name="delete_board">DISASSOCIATE BOARD</string>

</resources>