<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ProfileActivity">

    <ImageView
        android:id="@+id/back_button_profile"
        android:layout_width="30dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/source_sans_pro_bold"
        android:text="@string/your_profile"
        android:textColor="@color/greenhouse_primary"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/back_button_profile"
        app:layout_constraintTop_toBottomOf="@+id/back_button_profile" />


    <TextView

        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/source_sans_pro_semi_bold"
        android:text="@string/e_mail"
        android:textColor="@color/greenhouse_primary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/emailTextViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:textColor="@color/greenhouse_darker_green"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/emailLabel"
        app:layout_constraintTop_toTopOf="@+id/emailLabel" />


    <ImageView
        android:id="@+id/profileLogoutButton"
        android:layout_width="155dp"
        android:layout_height="35dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/module_mk_1"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profileButtonTextView"
        android:layout_width="70dp"
        android:layout_height="15dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/source_sans_pro_regular"
        android:letterSpacing="0.06"
        android:text="@string/log_out"
        android:textColor="@color/greenhouse_primary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/profileLogoutButton"
        app:layout_constraintEnd_toEndOf="@+id/profileLogoutButton"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="@+id/profileLogoutButton"
        app:layout_constraintTop_toTopOf="@+id/profileLogoutButton"
        app:layout_constraintVertical_bias="0.44" />

</androidx.constraintlayout.widget.ConstraintLayout>